# animal_game

./: Cargo.toml  README.md
src/: ecs.rs  graphic_context.rs  keyboard_context.rs  lib.rs  main.rs  players.rs  simulation.rs  timer_context.rs  world.rs
src/adapters/: engine.rs
src/adapters/engine/: graphic_context.rs  keyboard_context.rs  timer_context.rs
src/adapters/engine/graphic_context/: animal_game_engine_graphics_adapter.rs
src/adapters/engine/keyboard_context/: animal_game_engine_keyboard_adapter.rs
src/adapters/engine/timer_context/: animal_game_engine_timer_adapter.rs
src/ecs/: bevy_ecs_adapter.rs
src/graphic_context/: animal_game_engine_graphics.rs
src/interfaces/: engine.rs
src/interfaces/engine/: graphic_context.rs  keyboard_context.rs  timer_context.rs
src/keyboard_context/: animal_game_engine_keyboard.rs
src/timer_context/: animal_game_engine_timer.rs
